# Espresso

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.md  conanfile.txt  espresso.h  format  main.cpp
.github/workflows/: ci.yml  cmake-multi-platform.yml  release.yml
cmake/: espresso-config.cmake.in
docs/: orm.md
examples/: CMakeLists.txt  example1.cpp  example2.cpp  example3.cpp  https.cpp  openssl_example.cpp  url_shortener.cpp
include/: Server.h  base_server.hpp  cookie.hpp  custom_data.hpp  server.h
include/ds/: tsqueue.hpp
include/error/: declare_exception.hpp  io_exceptions.hpp
include/http/: headers.hpp  methods.hpp  mime.hpp  request.hpp  response.hpp  server.hpp
include/https/: server.hpp  socket.hpp  ssl_context.hpp
include/lib/json/: JSONObject.h  JSONPrimitive.h  json_array.h  json_boolean.h  json_literal.h  json_number.h  json_object.h  json_primitive.h
include/middleware/: BaseMiddleware.h  JSONMiddleware.h  Middleware.h  base_middleware.h  base_middleware.hpp  json_middleware.h  middleware.h  middleware_list.hpp  types.hpp
include/middleware/presets/: json_parser.hpp  static_files.hpp
include/net/: connection.hpp  connection_manager.hpp  socket.hpp
include/orm/: concepts.hpp  exception.hpp  utils.hpp
include/orm/database/: concepts.hpp  db_instance.hpp  db_manager.hpp  sql_compiler.hpp  types.hpp
include/orm/database/presets/: sqlite_compiler.hpp  sqlite_instance.hpp
include/orm/model/: field_property.hpp  foreign_key.hpp  meta_model.hpp  model.hpp  model_manager.hpp  model_meta.hpp  validate.hpp
include/orm/queryset/: filter.hpp  filter_field.hpp  queryset.hpp
include/orm/reflection/: compile_time_instance.hpp  field_name.hpp  field_wrapper.hpp  fields.hpp  get_name.hpp  num_fields.hpp  to_view.hpp
include/orm/utils/: anycast.hpp  stringify.hpp  types.hpp
include/requests/: Cookies.h  HTTPRequest.h  HTTPResponse.h  http_message.h  http_method.h  http_request.h  http_response.h
include/routing/: PathRegex.h  Route.h  Router.h  base_route.hpp  path.hpp  path_regex.h  route.h  router.h  router.hpp  types.hpp
include/routing/presets/: file_view.hpp
include/utils/: call_detectable.hpp  error.hpp  maybe_uninit.hpp  net.hpp  network_stream.hpp  string.hpp  tuple.hpp  types.hpp
lib/: HTTPMessage.cpp  HTTPMessage.h  Server.cpp  Server.h
src/: CMakeLists.txt  Cookies.cpp  Cookies.h  HTTPMessage.cpp  HTTPMessage.h  HTTPMethod.cpp  HTTPMethod.h  HTTPRequest.cpp  HTTPRequest.h  HTTPResponse.cpp  HTTPResponse.h  Middleware.cpp  Middleware.h  PathRegex.cpp  PathRegex.h  Route.cpp  Route.h  Router.cpp  Router.h  Server.cpp  Server.h  cookie.cpp  espresso.h  main.cpp  server.cpp  utils.cpp  utils.h
src/http/: headers.cpp  request.cpp  response.cpp  server.cpp
src/https/: server.cpp  socket.cpp  ssl_context.cpp
src/lib/json/: JSON.cpp  JSON.h  JSONArray.cpp  JSONArray.h  JSONBase.cpp  JSONBase.h  JSONBoolean.cpp  JSONBoolean.h  JSONEntity.cpp  JSONEntity.h  JSONLiteral.cpp  JSONLiteral.h  JSONNumber.cpp  JSONNumber.h  JSONObject.cpp  JSONObject.h  JSONPrimitive.cpp  JSONPrimitive.h  expections.h  json.cpp  json.h  json_array.cpp  json_base.cpp  json_boolean.cpp  json_entity.cpp  json_literal.cpp  json_number.cpp  json_object.cpp  json_primitive.cpp
src/lib/trie/: RouterTrie.cpp  RouterTrie.h  RouterTrieNode.cpp  RouterTrieNode.h
src/middleware/: BaseMiddleware.h  FormDataMiddleware.h  JSONMiddleware.cpp  JSONMiddleware.h  Middleware.cpp  json_middleware.cpp  middleware.cpp  middleware_list.cpp
src/net/: connection_manager.cpp  socket.cpp
src/orm/: exceptions.h
src/orm/database/: AtomicTransaction.cpp  AtomicTransaction.h  DatabaseManager.cpp  DatabaseManager.h  SQLiteDatabaseManager.cpp  SQLiteDatabaseManager.h
src/orm/database/presets/: sqlite_instance.cpp
src/orm/model/: Aggregation.cpp  Aggregation.h  BaseModel.cpp  BaseModel.h  Model.cpp  Model.h  ModelData.cpp  ModelData.h  ModelManager.cpp  ModelManager.h
src/orm/model/fields/: BaseModelField.cpp  BaseModelField.h  Field.cpp  Field.h  FieldData.h  FieldParams.cpp  FieldParams.h  ForeignKey.cpp  ForeignKey.h  ModelDataField.cpp  ModelDataField.h  ModelField.cpp  ModelField.h  PrimaryKey.cpp  PrimaryKey.h
src/orm/model/query/: QueryBuilder.cpp  QueryBuilder.h
src/orm/model/query/filter/: FilterField.cpp  FilterField.h  FilterNode.h  FilterOperation.cpp  FilterOperation.h  Operation.cpp  Operation.h  Operator.cpp  Operator.h
src/orm/models/: SQLGenerator.h
src/orm/sql/: SQLGenerator.cpp  SQLGenerator.h  SQLTypes.cpp  SQLTypes.h  SQLiteSQLGenerator.cpp  SQLiteSQLGenerator.h
src/orm/utils/: PrimitiveWrapper.cpp  PrimitiveWrapper.h  SQLizable.h  Serializable.h
src/requests/: Cookies.cpp  HTTPMessage.cpp  HTTPMethod.cpp  HTTPRequest.cpp  HTTPResponse.cpp  cookies.cpp  http_message.cpp  http_method.cpp  http_request.cpp  http_response.cpp
src/routing/: PathRegex.cpp  Route.cpp  Router.cpp  path.cpp  path_regex.cpp  route.cpp  router.cpp
src/tls/: ssl_context.cpp
src/views/: index.html
tests/: CMakeLists.txt  CookiesTests.cpp  HTTPMessageTests.cpp  HTTPMethodTests.cpp  HTTPRequestTests.cpp  HTTPResponseTests.cpp  MiddlewareTests.cpp  PathRegexTests.cpp  RouterTests.cpp  RouterTrieNodeTests.cpp  RouterTrieTests.cpp  ServerTests.cpp  UtilsTests.cpp  config.h.in  main.cpp
tests/lib/json/: JSONArrayTests.cpp  JSONBenchmarkTest.cpp  JSONLiteralTests.cpp  JSONObjectTests.cpp  JSONParseTests.cpp  JSONPrimitiveTests.cpp
tests/middleware/: FormDataTests.cpp
tests/orm/: SQLiteDatabaseManagerTests.cpp  pk.cpp
tests/orm/database/: AtomicTransactionTests.cpp  SQLiteDatabaseManagerTests.cpp
tests/orm/sql/: SQLGeneratorTests.cpp
tests/orm/utils/: PrimitiveWrapperTests.cpp
tests/reflection/: field_name.cpp  field_reflection.cpp  num_fields.cpp  struct_name.cpp  to_view.cpp
tests/utils/: string.cpp
